terraform_iaac/v1_ec2.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_instance" "web" {
  ami           = "ami-0c7217cdde317cfec"
  instance_type = "t2.micro"
  key_name      = "dop"
 }
